# switch-1

./: .env.example  .gitignore  AGENTS.md  README.md  dispatchers.example.json  dispatchers.json  opencode.json  pyproject.toml
docs/: architecture.md  setup.md
docs/diagrams/: system.mermaid
scripts/: ask-agent  ask-agent.py  read-mam.py  sessions.sh  spawn-session
skills/: spawn-session.md
src/: bridge.py  db.py  delegation.py  engines.py  helpers.py  utils.py
src/attachments/: server.py
src/bots/: dispatcher.py
src/bots/session/: bot.py
src/commands/: handlers.py
src/core/session_runtime/: __init__.py  api.py  ports.py  runtime.py
src/lifecycle/: sessions.py
src/runners/: __init__.py  registry.py  subprocess_transport.py
src/runners/claude/: runner.py
src/runners/opencode/: __init__.py  client.py  config.py  errors.py  events.py  models.py  processor.py  runner.py  transport.py
src/runners/pi/: config.py  processor.py  runner.py
src/voice/: __init__.py
tests/: test_crash_guards.py
