[project]
name = "switch"
version = "0.1.0"
description = "Chat with AI coding assistants from any XMPP client"
requires-python = ">=3.11"
dependencies = [
    "slixmpp>=1.8.0",
    "aiohttp>=3.9.0",
    "setuptools==68.0.0",
]

[project.optional-dependencies]
voice = [
    "aiortc>=1.9.0",
    "faster-whisper>=1.0.0",
    "webrtcvad>=2.0.10",
    "numpy",
]
